--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt-ts": "^5.0.0",
     "drizzle-orm": "^0.29.2",
     "geist": "^1.2.0",
+    "mysql2": "^3.12.0",
     "next": "^14.0.4",
     "next-auth": "5.0.0-beta.4",
     "postgres": "^3.4.3",
